objects/LAT_BR_TrainingSurveyQuestions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>LAT_BR_TSQ_Months_Ago__c</fullName>
        <label>LAT_BR_TSQ_Months_Ago</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TSQ_Order__c</fullName>
        <label>LAT_BR_TSQ_Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TSQ_Question__c</fullName>
        <label>LAT_BR_TSQ_Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TSQ_Type__c</fullName>
        <inlineHelpText>Types : CSR, MIXOLOGISTA or OTHER</inlineHelpText>
        <label>LAT_BR_TSQ_Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>LAT_BR_TrainingSurveyQuestions</label>
</CustomObject>